test/parse/assert/bad-assert-return-arithmetic-nan-invalid-return-type.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func $foo (result i32) 
     i32.const 0)
  (export "foo" (func $foo)))

(assert_return_arithmetic_nan (invoke "foo"))
(;; STDERR ;;;
out/test/parse/assert/bad-assert-return-arithmetic-nan-invalid-return-type.txt:8:32: error: type mismatch at action. got i32, expected f32 or f64
(assert_return_arithmetic_nan (invoke "foo"))
                               ^^^^^^
;;; STDERR ;;)
